--- a/app/src/main/res/layout/item_ad.xml
+++ b/app/src/main/res/layout/item_ad.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:ads="http://schemas.android.com/apk/res-auto">
     <data>
 
         <variable
@@ -11,6 +11,13 @@
         android:orientation="vertical" android:layout_width="match_parent"
         android:background="@android:color/holo_blue_bright"
         android:layout_height="65dp">
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/banner_ad_unit_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
+        </com.google.android.gms.ads.AdView>
     </LinearLayout>
 </layout>
