--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -1,27 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
-    android:background="@color/mainBackgroundColor"
-    tools:context="com.whl.emoguoshi.view.activity.AboutUsActivity">
+    >
+    <data>
 
-    <ImageView
-android:src="@mipmap/logo"
-        android:layout_marginTop="59dp"
-        android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
+        <variable
+            name="viewModel"
+            type="com.whl.emoguoshi.viewmodel.AboutUsViewModel" />
+    </data>
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp"
-        android:layout_marginTop="65dp"
-        android:textColor="#FFBDC0C4"
-        android:textSize="16sp"
-        android:text="wanghl
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:background="@color/mainBackgroundColor"
+        tools:context="com.whl.emoguoshi.view.activity.AboutUsActivity">
+
+        <include layout="@layout/title"
+            app:viewModel="@{viewModel}"
+            />
+        <ImageView
+            android:src="@mipmap/logo"
+            android:layout_marginTop="59dp"
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_marginLeft="60dp"
+            android:layout_marginRight="60dp"
+            android:layout_marginTop="65dp"
+            android:textColor="#FFBDC0C4"
+            android:textSize="16sp"
+            android:text="wanghl
 email：keke88520@163.com
 QQ：309863537
 
@@ -31,6 +44,7 @@ QQ：xxx
 
 如果您觉得app还不错，可以为我们打赏，我们努力开出更好的app
 "
-        android:layout_height="wrap_content" />
+            android:layout_height="wrap_content" />
 
-</LinearLayout>
+    </LinearLayout>
+</layout>
