--- a/app/src/main/res/layout/item_ad.xml
+++ b/app/src/main/res/layout/item_ad.xml
@@ -9,8 +9,7 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/ll_container"
         android:orientation="vertical" android:layout_width="match_parent"
-        android:background="@android:color/holo_blue_bright"
-        android:layout_height="65dp">
+        android:layout_height="wrap_content">
         <com.google.android.gms.ads.AdView
             android:id="@+id/adView"
             ads:adSize="BANNER"
